syntax = "proto3";

import "google/protobuf/timestamp.proto";

package easylocate;

// Location Report
// Sent from Tracelet to the consuming system (consumer) via TCP port
// - Tracelet is TCP client
// - Consumer is TCP server
//
// Format of a TCP message:
// - Byte 0: 0xFE
// - Byte 1: 0xED
// - Byte 2..5: Length of marshalled protobuf data (Byte 2=LSB)
// - Byte 6..n: Marshalled Protobuf Data (LocationReport Message)
message LocationReport {
    // timestamp when location data was received from easylocate system
    // resolution of tracelet: ms
    google.protobuf.Timestamp receive_ts = 1;

    // tracelet ID as provisioned in tracelet. Could be a vehicle ID
    string tracelet_id = 2;

    // location of tracelet in space
    // Units: [m], can be negative. Resolution 0.1m
    double x = 3;
    double y = 4;
    double z = 5;

    // Site ID
    // a 16 bit unsigned value
    uint32 site_id = 6;

    // Location signature
    // can be used to validate the received location
    fixed64 location_signature = 7;

    // Covariance. See Easylocate Specification for details
    double cov_xx = 8;
    double cov_xy = 9;
    double cov_yy = 10;
}
